Add platform compatible implementations for Java11+